fix image distortion

--- a/adoff/styles.css
+++ b/adoff/styles.css
@@ -124,6 +124,7 @@ ol  {
 img {
     width: 100%; 
     height: 100%;
+    object-fit: cover;
 }
 
 .slide-footer {
